--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,10 @@
             </p>
         </div>
     </section>
+    
+    <div style="display: flex; justify-content: center;">
+      <img style="width:300px; display: flex; justify-content: center;" src="qrcode.png" alt="">
+    </div>
 
     <footer style="
     text-align: center;
