Change the final message

--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                 </div>
             </div>
             <p style="text-align: center;" class="vision-text">
-                "We're not just building an app—we're pioneering a future where everyone can see their health destiny and change it."
+                This is more than prevention — it’s a transformation of global health.
             </p>
         </div>
     </section>
